[package]
name = "layer-proc-gen"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.4.0"
macroquad = "0.4.13"
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
arrayvec = "0.7.6"
rigid2d = { path = "rigid2d" }


[dependencies]
derive_more = { version = "1.0.0", default-features = false, features = [
    "add",
    "add_assign",
    "mul",
    "mul_assign",
] }
rand = { version = "0.8.5", default-features = false }
tracing = "0.1.40"
