[package]
name = "layer-proc-gen"
version = "3.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "easy to use chunk based procedural generation library with top-down planning"
repository = "https://github.com/oli-obk/layer-proc-gen"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.4.0"
macroquad = "0.4.13"
rigid2d = { path = "rigid2d", version = "1" }
tracing = "0.1.40"


[dependencies]
derive_more = { version = "2.0.0", default-features = false, features = [
    "add",
    "add_assign",
    "mul",
    "mul_assign",
] }
rand = { version = "0.9", features = ["small_rng"], default-features = false }
arrayvec = "0.7.6"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "arrayvec/serde"]